Add new classes and configuration for database integration
- Created DatabaseUtil class for database operations
- Added new model classes: GhostNet and Person
- Established enums: GhostNetStatus and PersonType for status and type management
- Set up persistence.xml for Derby database connection via JPA

--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,16 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
         <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>13.0.8</version>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.15.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.24.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
