feat: Implement GhostNet DAO, Controllers, JSF pages, Utils, CSS, and Tests
- Added GhostNet DAO class
- Created controllers for GhostNet, Person, and Login
- Developed JSF pages: Login, Home, addPerson, addGhostNet
- Implemented utility classes: Session management, RangeValidator for longitude and latitude inputs, Login filter to protect resources from unauthorized access
- Styled the entire project with CSS
- Added test classes for DAOs, controllers, and utility classes using JUnit and Mockito

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,15 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>org.saflo.ghostNetFishing.util.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>*.xhtml</url-pattern>
+    </filter-mapping>
     <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
+        <welcome-file>login.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
