--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.2.24.Final</version>
         </dependency>
+
+        <!-- Security Dependencies -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>6.3.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
